Closed Bug 257195 Opened 21 years ago Closed 21 years ago

Relative URIs in <svg:script> not working

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: tor, Assigned: tor)

Details

Attachments

(1 file, 1 obsolete file)

We weren't passing a baseURI, so NS_NewURI was throwing out relative URIs.
Attached patch pass base URI (obsolete) — Splinter Review
Attachment #157208 - Flags: superreview?(jst)
Attachment #157208 - Flags: review?(bugmail)
Comment on attachment 157208 [details] [diff] [review] pass base URI that's gonna leak the nsIURI
Attachment #157208 - Flags: review?(bugmail) → review-
Comment on attachment 157208 [details] [diff] [review] pass base URI Uh, it is? I don't think so. sr=jst
Attachment #157208 - Flags: superreview?(jst)
Attachment #157208 - Flags: superreview+
Attachment #157208 - Flags: review?(bugmail)
Attachment #157208 - Flags: review-
Comment on attachment 157208 [details] [diff] [review] pass base URI well I think so :) GetBaseURI returns an already_AddRefed which ends up never being released.
Attachment #157208 - Flags: review?(bugmail) → review-
Comment on attachment 157208 [details] [diff] [review] pass base URI Duh, my eyes got stuck on 'uri', and I couldn't for the life of me figure out how *that* could leak. Reverting my sr...
Attachment #157208 - Flags: superreview+ → superreview-
Attached patch nsCOMPtr-fooSplinter Review
Attachment #157208 - Attachment is obsolete: true
Attachment #157217 - Flags: review?(bugmail)
Attachment #157217 - Flags: superreview?(jst)
Comment on attachment 157217 [details] [diff] [review] nsCOMPtr-foo sr=jst
Attachment #157217 - Flags: superreview?(jst) → superreview+
Checked in. Checking in nsSVGScriptElement.cpp; /cvsroot/mozilla/content/svg/content/src/nsSVGScriptElement.cpp,v <-- nsSVGScriptElement.cpp new revision: 1.7; previous revision: 1.6 done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: