Bug 257195 - relative URIs in <svg:script> not working.  r=sicking, sr=jst